resources/cluster-users/files/test_resources/k8s/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ory-hydra-login-consent
  namespace: kyma-system
spec:
  selector:
    matchLabels:
      app: ory-hydra-login-consent
      version: v1
  template:
    metadata:
      labels:
        app: ory-hydra-login-consent
        version: v1
    spec:
      containers:
        - name: login-consent
          image: eu.gcr.io/kyma-project/incubator/test-hydra-login-consent:d6e6d3bc
          ports:
          - containerPort: 3000
